@@ -3,7 +3,9 @@
  */
 package javax.jmdns.impl;
 
+import java.util.Date;
 import java.util.Timer;
+import java.util.TimerTask;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.atomic.AtomicReference;
@@ -148,11 +150,121 @@ public interface DNSTaskStarter {
          */
         private final Timer     _stateTimer;
 
+        public static class StarterTimer extends Timer {
+
+            // This is needed because in some case we cancel the timers before all the task have finished running and in some case they will try to reschedule
+            private volatile boolean _cancelled;
+
+            /**
+             *
+             */
+            public StarterTimer() {
+                super();
+                _cancelled = false;
+            }
+
+            /**
+             * @param isDaemon
+             */
+            public StarterTimer(boolean isDaemon) {
+                super(isDaemon);
+                _cancelled = false;
+            }
+
+            /**
+             * @param name
+             * @param isDaemon
+             */
+            public StarterTimer(String name, boolean isDaemon) {
+                super(name, isDaemon);
+                _cancelled = false;
+            }
+
+            /**
+             * @param name
+             */
+            public StarterTimer(String name) {
+                super(name);
+                _cancelled = false;
+            }
+
+            /*
+             * (non-Javadoc)
+             * @see java.util.Timer#cancel()
+             */
+            @Override
+            public void cancel() {
+                _cancelled = true;
+                super.cancel();
+            }
+
+            /*
+             * (non-Javadoc)
+             * @see java.util.Timer#schedule(java.util.TimerTask, long)
+             */
+            @Override
+            public synchronized void schedule(TimerTask task, long delay) {
+                if (_cancelled) return;
+                super.schedule(task, delay);
+            }
+
+            /*
+             * (non-Javadoc)
+             * @see java.util.Timer#schedule(java.util.TimerTask, java.util.Date)
+             */
+            @Override
+            public synchronized void schedule(TimerTask task, Date time) {
+                if (_cancelled) return;
+                super.schedule(task, time);
+            }
+
+            /*
+             * (non-Javadoc)
+             * @see java.util.Timer#schedule(java.util.TimerTask, long, long)
+             */
+            @Override
+            public synchronized void schedule(TimerTask task, long delay, long period) {
+                if (_cancelled) return;
+                super.schedule(task, delay, period);
+            }
+
+            /*
+             * (non-Javadoc)
+             * @see java.util.Timer#schedule(java.util.TimerTask, java.util.Date, long)
+             */
+            @Override
+            public synchronized void schedule(TimerTask task, Date firstTime, long period) {
+                if (_cancelled) return;
+                super.schedule(task, firstTime, period);
+            }
+
+            /*
+             * (non-Javadoc)
+             * @see java.util.Timer#scheduleAtFixedRate(java.util.TimerTask, long, long)
+             */
+            @Override
+            public synchronized void scheduleAtFixedRate(TimerTask task, long delay, long period) {
+                if (_cancelled) return;
+                super.scheduleAtFixedRate(task, delay, period);
+            }
+
+            /*
+             * (non-Javadoc)
+             * @see java.util.Timer#scheduleAtFixedRate(java.util.TimerTask, java.util.Date, long)
+             */
+            @Override
+            public synchronized void scheduleAtFixedRate(TimerTask task, Date firstTime, long period) {
+                if (_cancelled) return;
+                super.scheduleAtFixedRate(task, firstTime, period);
+            }
+
+        }
+
         public DNSTaskStarterImpl(JmDNSImpl jmDNSImpl) {
             super();
             _jmDNSImpl = jmDNSImpl;
-            _timer = new Timer("JmDNS(" + _jmDNSImpl.getName() + ").Timer", true);
-            _stateTimer = new Timer("JmDNS(" + _jmDNSImpl.getName() + ").State.Timer", false);
+            _timer = new StarterTimer("JmDNS(" + _jmDNSImpl.getName() + ").Timer", true);
+            _stateTimer = new StarterTimer("JmDNS(" + _jmDNSImpl.getName() + ").State.Timer", false);
         }
 
         /*
